Fix navbar width greater than view when scrollbar

--- a/dc-website/src/app/components/navbar/navbar.component.scss
+++ b/dc-website/src/app/components/navbar/navbar.component.scss
@@ -16,7 +16,7 @@ nav {
   position: absolute;
   top: 0;
   left: 0;
-  width: 100vw;
+  width: 100%;
   opacity: 0.98;
   visibility: hidden;
 
